--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "webpack-merge": "^0.8.3"
   },
   "dependencies": {
+    "aws-xray-sdk": "^1.1.4",
     "chess.js": "^0.10.2",
     "chessground": "^3.1.0",
     "jquery": "^3.1.1",
